<resources>
    <string name="app_name">test</string>
    <string name="hold">持有</string>
    <string name="follow">关注</string>
    <string name="summary">总结</string>
    <string name="search">搜索</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cost">成本</string>
    <string name="current">当前</string>
    <string name="expect">预期</string>
    <string name="today_operation">今日操作</string>
    <string name="tomorrow_operation">明日操作</string>
    <string name="comment">评论</string>
    <string name="number">数量</string>
    <string name="hold_days">持有天数</string>
    <string name="name">名称</string>
    <string name="code">代码</string>
    <string name="edit">编辑</string>
    <string name="hold_num">持有数量</string>
    <string name="sell_price">卖出价</string>
    <string name="background">背景</string>
    <string name="format_error">格式错误</string>
    <string name="confirm_delete">确定要删除吗</string>
    <string name="buy_time">买入时间</string>
    <string name="focus_degree">关注度</string>
    <string name="type">类型</string>
    <string name="info_not_complete">信息不完整</string>
    <string name="time_empty">未选择时间</string>
    <string name="tag">标签</string>
    <string name="huawei_concept">华为概念</string>
    <string name="tag_first_level">一级标签</string>
    <string name="tag_second_level">二级标签</string>
    <string name="cancel">取消</string>
    <string name="tag_level">标签等级</string>
    <string name="level_not_selected">未选择等级</string>
    <string name="stock">股票</string>
    <string name="stock_empty">未选择股票</string>
    <string name="description">简介</string>
    <string name="no_tags">未填写标签</string>
    <string name="add_tags">添加标签</string>
    <string name="all_stocks">所有股票</string>
    <string name="collection_articles">收藏</string>
    <string name="picture">图片</string>
    <string name="title">标题</string>
    <string name="image_not_selected">未选择图片</string>
    <string name="content">内容</string>
    <string name="text">文本</string>
    <string name="image">图片</string>
    <string name="content_empty">内容为空</string>
    <string name="backup">备份</string>
    <string name="add_from_file">从文件中添加</string>
    <string name="backup_finished">备份完成</string>
    <string name="recover_finished">恢复完毕</string>
</resources>
