<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:fitsSystemWindows="true"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:background="@drawable/bg_bottom_dialog">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">
        <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:text="@string/cancel"
                android:textColor="@color/color_gray"
                android:gravity="center"
                android:textSize="18sp"
                android:background="?attr/selectableItemBackground"/>

        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/bg_black_06"/>

        <TextView
                android:id="@+id/tvOk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:text="@android:string/ok"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textSize="18sp"
                android:background="?attr/selectableItemBackground"/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:text="@string/tag_level"
            android:textColor="#222222"
            android:textSize="16sp"/>

    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

        <RadioButton
                android:id="@+id/rbFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="0"/>
        <RadioButton
                android:id="@+id/rbSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="1"/>

    </RadioGroup>

    <TextView
            style="@style/HoldTextView"
            android:text="@string/tag"
            android:layout_gravity="start"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"/>

    <EditText
            android:id="@+id/etTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:textColor="@color/black_color_aa"
            android:background="@drawable/bg_text_input"/>

    <View
            android:layout_width="0dp"
            android:layout_height="32dp"/>
</LinearLayout>