<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <data>
                <variable name="order" type="com.bing.stockhelper.model.entity.OrderDetail"/>
        </data>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:context=".self.personalfiles.PersonalFilesActivity">

                        <androidx.appcompat.widget.Toolbar
                                android:id="@+id/toolbar"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                app:contentInsetStart="0dp">

                                <ImageView
                                        android:id="@+id/back"
                                        android:layout_width="48dp"
                                        android:layout_height="48dp"
                                        android:scaleType="centerInside"
                                        android:src="@drawable/ic_arrow_back_black_24dp"
                                        android:background="?android:selectableItemBackground"/>

                                <ImageView
                                        android:id="@+id/cancel"
                                        android:layout_width="48dp"
                                        android:layout_height="48dp"
                                        android:scaleType="centerInside"
                                        android:src="@drawable/ic_close_black_24dp"
                                        android:background="?android:selectableItemBackground"/>
                        </androidx.appcompat.widget.Toolbar>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/background"/>

                                <View
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"/>

                                <ImageView
                                        android:id="@+id/ivBg"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:paddingHorizontal="16dp"
                                        android:paddingVertical="4dp"
                                        android:src="@drawable/ic_add_circle"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/name"/>

                                <EditText
                                        android:id="@+id/etName"
                                        android:paddingVertical="12dp"
                                        style="@style/HoldEditText"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/code"/>

                                <EditText
                                        android:id="@+id/etCode"
                                        style="@style/HoldEditText"
                                        android:paddingVertical="12dp"
                                        android:inputType="number"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/cost"/>

                                <EditText
                                        android:id="@+id/etCost"
                                        style="@style/HoldEditText"
                                        android:paddingVertical="12dp"
                                        android:inputType="numberDecimal"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/hold_num"/>

                                <EditText
                                        android:id="@+id/etHoldNum"
                                        style="@style/HoldEditText"
                                        android:paddingVertical="12dp"
                                        android:inputType="number"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:id="@+id/llBuyTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/buy_time"/>

                                <TextView
                                        android:id="@+id/etBuyTime"
                                        android:paddingVertical="12dp"
                                        style="@style/HoldEditText"/>

                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/expect"/>

                                <EditText
                                        android:id="@+id/etExpect"
                                        style="@style/HoldEditText"
                                        android:paddingVertical="12dp"
                                        android:inputType="numberDecimal"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/current"/>

                                <EditText
                                        android:id="@+id/etCurrent"
                                        style="@style/HoldEditText"
                                        android:paddingVertical="12dp"
                                        android:inputType="numberDecimal"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/sell_price"/>

                                <EditText
                                        android:id="@+id/etSellPrice"
                                        style="@style/HoldEditText"
                                        android:paddingVertical="12dp"
                                        android:inputType="numberDecimal"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/today_operation"/>

                                <EditText
                                        android:id="@+id/etTodayOp"
                                        android:paddingVertical="12dp"
                                        style="@style/HoldEditText"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:paddingVertical="12dp"
                                        android:text="@string/tomorrow_operation"/>

                                <EditText
                                        android:id="@+id/etTomorrowOp"
                                        android:paddingVertical="12dp"
                                        style="@style/HoldEditText"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:background="@color/bg_black_06"/>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?android:attr/selectableItemBackground"
                                android:orientation="vertical"
                                android:paddingStart="16dp"
                                android:paddingEnd="8dp"
                                android:paddingVertical="12dp">

                                <TextView
                                        style="@style/HoldTextView"
                                        android:text="@string/comment"/>

                                <EditText
                                        android:id="@+id/etComment"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:minHeight="50dp"
                                        android:layout_marginTop="8dp"
                                        android:padding="8dp"
                                        android:textSize="14sp"
                                        android:textColor="@color/black_color_aa"
                                        android:background="@drawable/bg_text_input"/>

                        </LinearLayout>

                        <View
                                android:layout_width="0dp"
                                android:layout_height="280dp"/>
                </LinearLayout>
        </androidx.core.widget.NestedScrollView>

</layout>