<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:contentInsetStart="0dp">

            <ImageView
                    android:id="@+id/back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:background="?android:selectableItemBackground"/>

            <ImageView
                    android:id="@+id/cancel"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_close_black_24dp"
                    android:background="?android:selectableItemBackground"/>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/toolbar">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp">

                    <TextView
                            style="@style/HoldTextView"
                            android:paddingVertical="12dp"
                            android:text="@string/background"/>

                    <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                    <ImageView
                            android:id="@+id/ivBg"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="4dp"
                            android:src="@drawable/ic_add_circle"/>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/bg_black_06"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp">

                    <TextView
                            style="@style/HoldTextView"
                            android:paddingVertical="12dp"
                            android:text="@string/name"/>

                    <EditText
                            android:id="@+id/etName"
                            android:paddingVertical="12dp"
                            style="@style/HoldEditText"/>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/bg_black_06"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp">

                    <TextView
                            style="@style/HoldTextView"
                            android:paddingVertical="12dp"
                            android:text="@string/code"/>

                    <EditText
                            android:id="@+id/etCode"
                            style="@style/HoldEditText"
                            android:paddingVertical="12dp"
                            android:inputType="number"/>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/bg_black_06"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp">

                    <TextView
                            style="@style/HoldTextView"
                            android:paddingVertical="12dp"
                            android:text="@string/tag_first_level"/>

                    <TextView
                            android:id="@+id/tvFirstTags"
                            android:paddingVertical="12dp"
                            style="@style/HoldEditText"/>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/bg_black_06"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp">

                    <TextView
                            style="@style/HoldTextView"
                            android:paddingVertical="12dp"
                            android:text="@string/tag_second_level"/>

                    <TextView
                            android:id="@+id/tvSecondTags"
                            android:paddingVertical="12dp"
                            style="@style/HoldEditText"/>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/bg_black_06"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp"
                        android:paddingVertical="12dp">

                    <TextView
                            style="@style/HoldTextView"
                            android:text="@string/comment"/>

                    <EditText
                            android:id="@+id/etDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="50dp"
                            android:layout_marginTop="8dp"
                            android:padding="8dp"
                            android:textSize="14sp"
                            android:textColor="@color/black_color_aa"
                            android:background="@drawable/bg_text_input"/>

                </LinearLayout>

                <View
                        android:layout_width="0dp"
                        android:layout_height="280dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>